--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0.11"
 rand = { version = "0.7.3", default-features=false }
 rand_pcg = "0.2.1"
 rand_distr = "0.2.2"
+wide = "0.6.4"
 
 [profile.release]
 debug = true
